--- a/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
@@ -33442,6 +33442,14 @@ spec:
               updateSelector:
                 description: UpdateSelector is an experimental field. Behaviour may
                   change.
+                enum:
+                - ""
+                - Nothing
+                - StatelessOnly
+                - MasterOnly
+                - TabletNodesOnly
+                - ExecNodesOnly
+                - Everything
                 type: string
               useIpv4:
                 default: false
