--- a/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
@@ -33260,6 +33260,10 @@ spec:
                 properties:
                   description:
                     type: string
+                  directDownload:
+                    description: When this is set to false, UI will use backend for
+                      downloading instead of proxy.
+                    type: boolean
                   environment:
                     default: testing
                     type: string
