add sidecars support to primary masters containers (#259)
* add sidecars support to primary masters containers

* add ytop-chart/templates/ytsaurus-crd.yaml

---------

Co-authored-by: Konstantin Malov <k-malov@ytsaurus.tech>

--- a/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
@@ -15268,6 +15268,10 @@ spec:
                     type: object
                   runtimeClassName:
                     type: string
+                  sidecars:
+                    items:
+                      type: string
+                    type: array
                   structuredLoggers:
                     items:
                       properties:
@@ -26959,6 +26963,10 @@ spec:
                       type: object
                     runtimeClassName:
                       type: string
+                    sidecars:
+                      items:
+                        type: string
+                      type: array
                     structuredLoggers:
                       items:
                         properties:
