--- a/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
@@ -33462,6 +33462,12 @@ spec:
               useIpv6:
                 default: false
                 type: boolean
+              keepSocket:
+                default: true
+                type: boolean
+              forceTcp:
+                default: true
+                type: boolean
               usePorto:
                 default: false
                 type: boolean
