Add option for per location disk space quota (#279)
Default heuristic does not work when locations share one volume,
or when volume does not have any space limit.

--- a/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
@@ -779,6 +779,14 @@ spec:
                         path:
                           minLength: 1
                           type: string
+                        quota:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: Disk space quota, default is size of related
+                            volume.
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
                       type: object
                     type: array
                   loggers:
@@ -3112,6 +3120,14 @@ spec:
                           path:
                             minLength: 1
                             type: string
+                          quota:
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            description: Disk space quota, default is size of related
+                              volume.
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
                         type: object
                       type: array
                     loggers:
@@ -5457,6 +5473,14 @@ spec:
                         path:
                           minLength: 1
                           type: string
+                        quota:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: Disk space quota, default is size of related
+                            volume.
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
                       type: object
                     type: array
                   loggers:
@@ -7953,6 +7977,14 @@ spec:
                           path:
                             minLength: 1
                             type: string
+                          quota:
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            description: Disk space quota, default is size of related
+                              volume.
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
                         type: object
                       type: array
                     loggers:
@@ -10328,6 +10360,14 @@ spec:
                           path:
                             minLength: 1
                             type: string
+                          quota:
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            description: Disk space quota, default is size of related
+                              volume.
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
                         type: object
                       type: array
                     loggers:
@@ -12716,6 +12756,14 @@ spec:
                         path:
                           minLength: 1
                           type: string
+                        quota:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: Disk space quota, default is size of related
+                            volume.
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
                       type: object
                     type: array
                   loggers:
@@ -15097,6 +15145,14 @@ spec:
                         path:
                           minLength: 1
                           type: string
+                        quota:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: Disk space quota, default is size of related
+                            volume.
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
                       type: object
                     type: array
                   loggers:
@@ -17431,6 +17487,14 @@ spec:
                         path:
                           minLength: 1
                           type: string
+                        quota:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: Disk space quota, default is size of related
+                            volume.
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
                       type: object
                     type: array
                   loggers:
@@ -19755,6 +19819,14 @@ spec:
                         path:
                           minLength: 1
                           type: string
+                        quota:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: Disk space quota, default is size of related
+                            volume.
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
                       type: object
                     type: array
                   loggers:
@@ -22086,6 +22158,14 @@ spec:
                           path:
                             minLength: 1
                             type: string
+                          quota:
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            description: Disk space quota, default is size of related
+                              volume.
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
                         type: object
                       type: array
                     loggers:
@@ -24453,6 +24533,14 @@ spec:
                         path:
                           minLength: 1
                           type: string
+                        quota:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: Disk space quota, default is size of related
+                            volume.
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
                       type: object
                     type: array
                   loggers:
@@ -26792,6 +26880,14 @@ spec:
                           path:
                             minLength: 1
                             type: string
+                          quota:
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            description: Disk space quota, default is size of related
+                              volume.
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
                         type: object
                       type: array
                     loggers:
@@ -29195,6 +29291,14 @@ spec:
                           path:
                             minLength: 1
                             type: string
+                          quota:
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            description: Disk space quota, default is size of related
+                              volume.
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
                         type: object
                       type: array
                     loggers:
@@ -31546,6 +31650,14 @@ spec:
                           path:
                             minLength: 1
                             type: string
+                          quota:
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            description: Disk space quota, default is size of related
+                              volume.
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
                         type: object
                       type: array
                     loggers:
@@ -34099,6 +34211,14 @@ spec:
                         path:
                           minLength: 1
                           type: string
+                        quota:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: Disk space quota, default is size of related
+                            volume.
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
                       type: object
                     type: array
                   loggers:
