--- a/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
@@ -895,6 +895,14 @@ spec:
                     additionalProperties:
                       type: string
                     type: object
+                  podAnnotations:
+                    additionalProperties:
+                      type: string
+                    type: object
+                  podLabels:
+                    additionalProperties:
+                      type: string
+                    type: object
                   readinessProbeParams:
                     properties:
                       failureThreshold:
@@ -3237,6 +3245,14 @@ spec:
                           x-kubernetes-map-type: atomic
                       type: object
                     nodeSelector:
+                      additionalProperties:
+                        type: string
+                      type: object
+                    podAnnotations:
+                      additionalProperties:
+                        type: string
+                      type: object
+                    podLabels:
                       additionalProperties:
                         type: string
                       type: object
@@ -5586,6 +5602,14 @@ spec:
                         x-kubernetes-map-type: atomic
                     type: object
                   nodeSelector:
+                    additionalProperties:
+                      type: string
+                    type: object
+                  podAnnotations:
+                    additionalProperties:
+                      type: string
+                    type: object
+                  podLabels:
                     additionalProperties:
                       type: string
                     type: object
@@ -8114,6 +8138,14 @@ spec:
                       additionalProperties:
                         type: string
                       type: object
+                    podAnnotations:
+                      additionalProperties:
+                        type: string
+                      type: object
+                    podLabels:
+                      additionalProperties:
+                        type: string
+                      type: object
                     privileged:
                       default: true
                       type: boolean
@@ -10490,6 +10522,14 @@ spec:
                           x-kubernetes-map-type: atomic
                       type: object
                     nodeSelector:
+                      additionalProperties:
+                        type: string
+                      type: object
+                    podAnnotations:
+                      additionalProperties:
+                        type: string
+                      type: object
+                    podLabels:
                       additionalProperties:
                         type: string
                       type: object
@@ -12889,6 +12929,14 @@ spec:
                     additionalProperties:
                       type: string
                     type: object
+                  podAnnotations:
+                    additionalProperties:
+                      type: string
+                    type: object
+                  podLabels:
+                    additionalProperties:
+                      type: string
+                    type: object
                   readinessProbeParams:
                     properties:
                       failureThreshold:
@@ -15282,6 +15330,14 @@ spec:
                     additionalProperties:
                       type: string
                     type: object
+                  podAnnotations:
+                    additionalProperties:
+                      type: string
+                    type: object
+                  podLabels:
+                    additionalProperties:
+                      type: string
+                    type: object
                   readinessProbeParams:
                     properties:
                       failureThreshold:
@@ -17620,6 +17676,14 @@ spec:
                     additionalProperties:
                       type: string
                     type: object
+                  podAnnotations:
+                    additionalProperties:
+                      type: string
+                    type: object
+                  podLabels:
+                    additionalProperties:
+                      type: string
+                    type: object
                   readinessProbeParams:
                     properties:
                       failureThreshold:
@@ -19949,6 +20013,14 @@ spec:
                         x-kubernetes-map-type: atomic
                     type: object
                   nodeSelector:
+                    additionalProperties:
+                      type: string
+                    type: object
+                  podAnnotations:
+                    additionalProperties:
+                      type: string
+                    type: object
+                  podLabels:
                     additionalProperties:
                       type: string
                     type: object
@@ -22291,6 +22363,14 @@ spec:
                       format: int32
                       type: integer
                     nodeSelector:
+                      additionalProperties:
+                        type: string
+                      type: object
+                    podAnnotations:
+                      additionalProperties:
+                        type: string
+                      type: object
+                    podLabels:
                       additionalProperties:
                         type: string
                       type: object
@@ -24666,6 +24746,14 @@ spec:
                     additionalProperties:
                       type: string
                     type: object
+                  podAnnotations:
+                    additionalProperties:
+                      type: string
+                    type: object
+                  podLabels:
+                    additionalProperties:
+                      type: string
+                    type: object
                   readinessProbeParams:
                     properties:
                       failureThreshold:
@@ -27014,6 +27102,14 @@ spec:
                           x-kubernetes-map-type: atomic
                       type: object
                     nodeSelector:
+                      additionalProperties:
+                        type: string
+                      type: object
+                    podAnnotations:
+                      additionalProperties:
+                        type: string
+                      type: object
+                    podLabels:
                       additionalProperties:
                         type: string
                       type: object
@@ -29428,6 +29524,14 @@ spec:
                       additionalProperties:
                         type: string
                       type: object
+                    podAnnotations:
+                      additionalProperties:
+                        type: string
+                      type: object
+                    podLabels:
+                      additionalProperties:
+                        type: string
+                      type: object
                     rack:
                       description: Name of the node rack.
                       type: string
@@ -31784,6 +31888,14 @@ spec:
                           x-kubernetes-map-type: atomic
                       type: object
                     nodeSelector:
+                      additionalProperties:
+                        type: string
+                      type: object
+                    podAnnotations:
+                      additionalProperties:
+                        type: string
+                      type: object
+                    podLabels:
                       additionalProperties:
                         type: string
                       type: object
@@ -34341,6 +34453,14 @@ spec:
                         x-kubernetes-map-type: atomic
                     type: object
                   nodeSelector:
+                    additionalProperties:
+                      type: string
+                    type: object
+                  podAnnotations:
+                    additionalProperties:
+                      type: string
+                    type: object
+                  podLabels:
                     additionalProperties:
                       type: string
                     type: object
