--- a/config/crd/bases/cluster.ytsaurus.tech_remoteexecnodes.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_remoteexecnodes.yaml
@@ -675,6 +675,7 @@ spec:
                 type: boolean
               hostNetwork:
                 default: false
+                description: Use the host's network namespace for all components.
                 type: boolean
               image:
                 description: Overrides coreImage for component.
