--- a/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
@@ -760,6 +760,10 @@ spec:
                     items:
                       type: string
                     type: array
+                  hostNetwork:
+                    description: Use the host's network namespace, this overrides
+                      global option.
+                    type: boolean
                   image:
                     description: Overrides coreImage for component.
                     type: string
@@ -3109,6 +3113,10 @@ spec:
                       items:
                         type: string
                       type: array
+                    hostNetwork:
+                      description: Use the host's network namespace, this overrides
+                        global option.
+                      type: boolean
                     image:
                       description: Overrides coreImage for component.
                       type: string
@@ -5470,6 +5478,10 @@ spec:
                     items:
                       type: string
                     type: array
+                  hostNetwork:
+                    description: Use the host's network namespace, this overrides
+                      global option.
+                    type: boolean
                   image:
                     description: Overrides coreImage for component.
                     type: string
@@ -7824,6 +7836,10 @@ spec:
                       items:
                         type: string
                       type: array
+                    hostNetwork:
+                      description: Use the host's network namespace, this overrides
+                        global option.
+                      type: boolean
                     image:
                       description: Overrides coreImage for component.
                       type: string
@@ -9770,6 +9786,7 @@ spec:
                 type: boolean
               hostNetwork:
                 default: false
+                description: Use the host's network namespace for all components.
                 type: boolean
               httpProxies:
                 items:
@@ -10384,6 +10401,10 @@ spec:
                       items:
                         type: string
                       type: array
+                    hostNetwork:
+                      description: Use the host's network namespace, this overrides
+                        global option.
+                      type: boolean
                     httpNodePort:
                       format: int32
                       type: integer
@@ -12794,6 +12815,10 @@ spec:
                     items:
                       type: string
                     type: array
+                  hostNetwork:
+                    description: Use the host's network namespace, this overrides
+                      global option.
+                    type: boolean
                   image:
                     description: Overrides coreImage for component.
                     type: string
@@ -15191,6 +15216,10 @@ spec:
                     items:
                       type: string
                     type: array
+                  hostNetwork:
+                    description: Use the host's network namespace, this overrides
+                      global option.
+                    type: boolean
                   image:
                     description: Overrides coreImage for component.
                     type: string
@@ -17541,6 +17570,10 @@ spec:
                     items:
                       type: string
                     type: array
+                  hostNetwork:
+                    description: Use the host's network namespace, this overrides
+                      global option.
+                    type: boolean
                   image:
                     description: Overrides coreImage for component.
                     type: string
@@ -19881,6 +19914,10 @@ spec:
                     items:
                       type: string
                     type: array
+                  hostNetwork:
+                    description: Use the host's network namespace, this overrides
+                      global option.
+                    type: boolean
                   image:
                     description: Overrides coreImage for component.
                     type: string
@@ -22228,6 +22265,10 @@ spec:
                       items:
                         type: string
                       type: array
+                    hostNetwork:
+                      description: Use the host's network namespace, this overrides
+                        global option.
+                      type: boolean
                     image:
                       description: Overrides coreImage for component.
                       type: string
@@ -24611,6 +24652,10 @@ spec:
                     items:
                       type: string
                     type: array
+                  hostNetwork:
+                    description: Use the host's network namespace, this overrides
+                      global option.
+                    type: boolean
                   image:
                     description: Overrides coreImage for component.
                     type: string
@@ -26966,6 +27011,10 @@ spec:
                       items:
                         type: string
                       type: array
+                    hostNetwork:
+                      description: Use the host's network namespace, this overrides
+                        global option.
+                      type: boolean
                     image:
                       description: Overrides coreImage for component.
                       type: string
@@ -29385,6 +29434,10 @@ spec:
                       items:
                         type: string
                       type: array
+                    hostNetwork:
+                      description: Use the host's network namespace, this overrides
+                        global option.
+                      type: boolean
                     image:
                       description: Overrides coreImage for component.
                       type: string
@@ -31752,6 +31805,10 @@ spec:
                       items:
                         type: string
                       type: array
+                    hostNetwork:
+                      description: Use the host's network namespace, this overrides
+                        global option.
+                      type: boolean
                     image:
                       description: Overrides coreImage for component.
                       type: string
@@ -34321,6 +34378,10 @@ spec:
                     items:
                       type: string
                     type: array
+                  hostNetwork:
+                    description: Use the host's network namespace, this overrides
+                      global option.
+                    type: boolean
                   image:
                     description: Overrides coreImage for component.
                     type: string
