--- a/config/crd/bases/cluster.ytsaurus.tech_remoteexecnodes.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_remoteexecnodes.yaml
@@ -694,6 +694,11 @@ spec:
                   type: object
                   x-kubernetes-map-type: atomic
                 type: array
+              initContainers:
+                description: List of init containers as yaml of core/v1 Container.
+                items:
+                  type: string
+                type: array
               instanceCount:
                 format: int32
                 type: integer
@@ -1093,7 +1098,7 @@ spec:
               runtimeClassName:
                 type: string
               sidecars:
-                description: List of sidecar containers as yaml of corev1.Container.
+                description: List of sidecar containers as yaml of core/v1 Container.
                 items:
                   type: string
                 type: array
