--- a/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
@@ -7843,6 +7843,11 @@ spec:
                     image:
                       description: Overrides coreImage for component.
                       type: string
+                    initContainers:
+                      description: List of init containers as yaml of core/v1 Container.
+                      items:
+                        type: string
+                      type: array
                     instanceCount:
                       format: int32
                       type: integer
@@ -8231,7 +8236,7 @@ spec:
                     runtimeClassName:
                       type: string
                     sidecars:
-                      description: List of sidecar containers as yaml of corev1.Container.
+                      description: List of sidecar containers as yaml of core/v1 Container.
                       items:
                         type: string
                       type: array
@@ -15430,6 +15435,7 @@ spec:
                   runtimeClassName:
                     type: string
                   sidecars:
+                    description: List of sidecar containers as yaml of core/v1 Container.
                     items:
                       type: string
                     type: array
@@ -27225,6 +27231,7 @@ spec:
                     runtimeClassName:
                       type: string
                     sidecars:
+                      description: List of sidecar containers as yaml of core/v1 Container.
                       items:
                         type: string
                       type: array
