--- a/config/crd/bases/cluster.ytsaurus.tech_remoteexecnodes.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_remoteexecnodes.yaml
@@ -807,6 +807,7 @@ spec:
                       - trace
                       - debug
                       - info
+                      - warning
                       - error
                       type: string
                     name:
@@ -943,6 +944,7 @@ spec:
                       - trace
                       - debug
                       - info
+                      - warning
                       - error
                       type: string
                     name:
@@ -1129,6 +1131,7 @@ spec:
                       - trace
                       - debug
                       - info
+                      - warning
                       - error
                       type: string
                     name:
