SetHostnameAsFQDN option is added to all components. Default is true (#302)
* SetHostnameAsFQDN option is added to all components. Default is true

* SetHostnameAsFQDN is true by default and the value is getting from instanceSpec in one place in server.go

* forgot lint-generated

--- a/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
@@ -986,6 +986,11 @@ spec:
                     type: object
                   runtimeClassName:
                     type: string
+                  setHostnameAsFqdn:
+                    default: true
+                    description: SetHostnameAsFQDN indicates whether to set the hostname
+                      as FQDN.
+                    type: boolean
                   structuredLoggers:
                     items:
                       properties:
@@ -3368,6 +3373,11 @@ spec:
                       type: object
                     runtimeClassName:
                       type: string
+                    setHostnameAsFqdn:
+                      default: true
+                      description: SetHostnameAsFQDN indicates whether to set the
+                        hostname as FQDN.
+                      type: boolean
                     structuredLoggers:
                       items:
                         properties:
@@ -5748,6 +5758,11 @@ spec:
                     type: object
                   runtimeClassName:
                     type: string
+                  setHostnameAsFqdn:
+                    default: true
+                    description: SetHostnameAsFQDN indicates whether to set the hostname
+                      as FQDN.
+                    type: boolean
                   structuredLoggers:
                     items:
                       properties:
@@ -8319,6 +8334,11 @@ spec:
                       type: object
                     runtimeClassName:
                       type: string
+                    setHostnameAsFqdn:
+                      default: true
+                      description: SetHostnameAsFQDN indicates whether to set the
+                        hostname as FQDN.
+                      type: boolean
                     sidecars:
                       description: List of sidecar containers as yaml of core/v1 Container.
                       items:
@@ -10736,6 +10756,11 @@ spec:
                       description: Service Type string describes ingress methods for
                         a service
                       type: string
+                    setHostnameAsFqdn:
+                      default: true
+                      description: SetHostnameAsFQDN indicates whether to set the
+                        hostname as FQDN.
+                      type: boolean
                     structuredLoggers:
                       items:
                         properties:
@@ -13157,6 +13182,11 @@ spec:
                     type: object
                   runtimeClassName:
                     type: string
+                  setHostnameAsFqdn:
+                    default: true
+                    description: SetHostnameAsFQDN indicates whether to set the hostname
+                      as FQDN.
+                    type: boolean
                   structuredLoggers:
                     items:
                       properties:
@@ -15584,6 +15614,11 @@ spec:
                     type: object
                   runtimeClassName:
                     type: string
+                  setHostnameAsFqdn:
+                    default: true
+                    description: SetHostnameAsFQDN indicates whether to set the hostname
+                      as FQDN.
+                    type: boolean
                   sidecars:
                     description: List of sidecar containers as yaml of core/v1 Container.
                     items:
@@ -17957,6 +17992,11 @@ spec:
                     type: object
                   runtimeClassName:
                     type: string
+                  setHostnameAsFqdn:
+                    default: true
+                    description: SetHostnameAsFQDN indicates whether to set the hostname
+                      as FQDN.
+                    type: boolean
                   structuredLoggers:
                     items:
                       properties:
@@ -20323,6 +20363,11 @@ spec:
                     type: object
                   runtimeClassName:
                     type: string
+                  setHostnameAsFqdn:
+                    default: true
+                    description: SetHostnameAsFQDN indicates whether to set the hostname
+                      as FQDN.
+                    type: boolean
                   structuredLoggers:
                     items:
                       properties:
@@ -22707,6 +22752,11 @@ spec:
                       description: Service Type string describes ingress methods for
                         a service
                       type: string
+                    setHostnameAsFqdn:
+                      default: true
+                      description: SetHostnameAsFQDN indicates whether to set the
+                        hostname as FQDN.
+                      type: boolean
                     structuredLoggers:
                       items:
                         properties:
@@ -25105,6 +25155,11 @@ spec:
                     type: object
                   runtimeClassName:
                     type: string
+                  setHostnameAsFqdn:
+                    default: true
+                    description: SetHostnameAsFQDN indicates whether to set the hostname
+                      as FQDN.
+                    type: boolean
                   structuredLoggers:
                     items:
                       properties:
@@ -27490,6 +27545,11 @@ spec:
                       type: object
                     runtimeClassName:
                       type: string
+                    setHostnameAsFqdn:
+                      default: true
+                      description: SetHostnameAsFQDN indicates whether to set the
+                        hostname as FQDN.
+                      type: boolean
                     sidecars:
                       description: List of sidecar containers as yaml of core/v1 Container.
                       items:
@@ -29939,6 +29999,11 @@ spec:
                       type: object
                     runtimeClassName:
                       type: string
+                    setHostnameAsFqdn:
+                      default: true
+                      description: SetHostnameAsFQDN indicates whether to set the
+                        hostname as FQDN.
+                      type: boolean
                     structuredLoggers:
                       items:
                         properties:
@@ -32342,6 +32407,11 @@ spec:
                       description: Service Type string describes ingress methods for
                         a service
                       type: string
+                    setHostnameAsFqdn:
+                      default: true
+                      description: SetHostnameAsFQDN indicates whether to set the
+                        hostname as FQDN.
+                      type: boolean
                     structuredLoggers:
                       items:
                         properties:
@@ -34920,6 +34990,11 @@ spec:
                     type: object
                   runtimeClassName:
                     type: string
+                  setHostnameAsFqdn:
+                    default: true
+                    description: SetHostnameAsFQDN indicates whether to set the hostname
+                      as FQDN.
+                    type: boolean
                   structuredLoggers:
                     items:
                       properties:
